# oyta_php

./: .gitignore  Cargo.toml  Cross.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  ROADMAP.md  install.ps1  install.sh
.cargo/: config.toml
oyta_cli/: Cargo.toml
oyta_cli/src/: main.rs
oyta_core/: Cargo.toml
oyta_core/src/: main.rs
oyta_core/src/cache/: driver.rs  facade.rs  manager.rs  mod.rs  multi_level.rs  redis_driver.rs  tag.rs
oyta_core/src/cache/warmup/: analyzer.rs  invalidator.rs  mod.rs  warmer.rs
oyta_core/src/cli/: args.rs  dispatch.rs  mod.rs  optimizer.rs
oyta_core/src/cli/dispatch/: build.rs  composer.rs  helpers.rs  info.rs  make.rs  mod.rs  optimize.rs  route.rs  server.rs  service.rs  types.rs  version_utils.rs
oyta_core/src/cli/optimizer/: autoload.rs  config_cache.rs  mod.rs  optimizer.rs  route_cache.rs  schema_cache.rs  types.rs
oyta_core/src/cluster/: distributed_cache.rs  distributed_lock.rs  distributed_session.rs  mod.rs  service_discovery.rs
oyta_core/src/command/: args.rs  cache.rs  composer.rs  config.rs  info.rs  init.rs  make.rs  migrate.rs  mod.rs  optimize.rs  queue.rs  route.rs  server.rs  service.rs
oyta_core/src/composer/: autoload.rs  downloader.rs  extractor.rs  lock.rs  manager.rs  mod.rs  packagist.rs  parser.rs  resolver.rs
oyta_core/src/composer/manager/: composer.rs  mod.rs  types.rs
oyta_core/src/config/: facade.rs  loader.rs  mod.rs  store.rs
oyta_core/src/container/: container.rs  facade.rs  mod.rs  service_provider.rs
oyta_core/src/coroutine/: channel.rs  mod.rs  scheduler.rs  sync.rs  task.rs
oyta_core/src/database/: cluster.rs  connection.rs  executor.rs  facade.rs  migration.rs  mod.rs  model.rs  pool_trait.rs  postgres_pool.rs  query_builder.rs  read_write_split.rs  relations.rs  sqlite_pool.rs
oyta_core/src/database/advanced/: cache.rs  listener.rs  logger.rs  mod.rs  reconnect.rs
oyta_core/src/database/crud/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
oyta_core/src/database/migration/: helpers.rs  manager.rs  migrator.rs  mod.rs  schema.rs  seeder.rs  types.rs
oyta_core/src/database/model/: accessor.rs  collection.rs  entity.rs  events.rs  field_map.rs  helpers.rs  instance.rs  lazy_write.rs  mod.rs  mutator.rs  output.rs  paginate.rs  preload.rs  query_ext.rs  relation_ops.rs  relation_stats.rs  scope.rs  searcher.rs  soft_delete_ext.rs  static_methods.rs  types.rs  virtual_model.rs
oyta_core/src/database/orm/: events.rs  json_field.rs  mod.rs  soft_delete.rs  timestamp.rs
oyta_core/src/database/query/: aggregate.rs  field.rs  having.rs  join_ext.rs  lock.rs  mod.rs  order_ext.rs  paging.rs  subquery.rs  union_query.rs  where_ext.rs
oyta_core/src/datetime/: datetime.rs  facade.rs  format.rs  interval.rs  mod.rs  parser.rs  period.rs  relative.rs  timezone.rs
oyta_core/src/debug/: mod.rs  trace.rs
oyta_core/src/embedded/: cron.rs  mod.rs  queue.rs  queue_facade.rs  queue_redis.rs  timer.rs  upload.rs  websocket.rs
oyta_core/src/env_loader/: loader.rs  mod.rs
oyta_core/src/error/: handler.rs  level.rs  mod.rs  reporter.rs  shutdown.rs  types.rs
oyta_core/src/eval/: context.rs  evaluator.rs  mod.rs  sandbox.rs
oyta_core/src/event/: dispatcher.rs  facade.rs  mod.rs  types.rs
oyta_core/src/fastcgi/: handler.rs  mod.rs  protocol.rs  server.rs
oyta_core/src/gd/: color.rs  draw.rs  filter.rs  image.rs  mod.rs  text.rs  transform.rs
oyta_core/src/helpers/: functions.rs  mod.rs
oyta_core/src/http/: facade.rs  handler.rs  mod.rs  request.rs  response.rs  server.rs  state.rs
oyta_core/src/http3/: connection.rs  h3.rs  mod.rs  quic.rs  stream.rs
oyta_core/src/i18n/: facade.rs  i18n.rs  lang.rs  mod.rs
oyta_core/src/interpreter/: enum_type.rs  fiber.rs  generator.rs  mod.rs  php8_features.rs  readonly.rs  value.rs
oyta_core/src/logging/: channel.rs  facade.rs  file_writer.rs  mod.rs  setup.rs
oyta_core/src/mbstring/: convert.rs  detect.rs  encoding.rs  http.rs  mod.rs  regex.rs  string.rs
oyta_core/src/microservice/: circuit_breaker.rs  config_center.rs  gateway.rs  loadbalancer.rs  mod.rs  registry.rs
oyta_core/src/middleware/: builtin.rs  dispatcher.rs  facade.rs  mod.rs  types.rs
oyta_core/src/monitor/: collector.rs  dashboard.rs  metrics.rs  mod.rs
oyta_core/src/output/: buffer.rs  callback.rs  handler.rs  mod.rs  types.rs
oyta_core/src/parser/: config_parser.rs  mod.rs  php_parser.rs  scanner.rs
oyta_core/src/phar/: compression.rs  manifest.rs  mod.rs  phar.rs  stub.rs
oyta_core/src/project/: detector.rs  info.rs  mod.rs
oyta_core/src/reflection/: attribute.rs  class.rs  enum_ref.rs  function.rs  metadata.rs  method.rs  mod.rs  parameter.rs  property.rs  type.rs
oyta_core/src/router/: annotation.rs  cache.rs  facade.rs  mod.rs  registry.rs  route_parser.rs  types.rs
oyta_core/src/sandbox/: executor.rs  filesystem.rs  mod.rs  monitor.rs  network.rs  resource.rs
oyta_core/src/search/: index.rs  mod.rs  query.rs  ranker.rs  storage.rs  tokenizer.rs
oyta_core/src/security/: crypt_facade.rs  crypto.rs  csrf.rs  csrf_facade.rs  hash.rs  hash_facade.rs  mod.rs  sql_injection.rs  xss.rs
oyta_core/src/serialize/: bincode_format.rs  cbor_format.rs  engine.rs  mod.rs  msgpack_format.rs  postcard_format.rs  stream.rs
oyta_core/src/service/: annotation.rs  bootstrap.rs  config.rs  mod.rs  registry.rs  traits.rs
oyta_core/src/session/: driver.rs  facade.rs  manager.rs  mod.rs
oyta_core/src/simd/: array_ops.rs  engine.rs  hash.rs  json_parse.rs  mod.rs  string_ops.rs
oyta_core/src/storage/: cos.rs  facade.rs  ftp.rs  local.rs  manager.rs  mod.rs  oss.rs  s3.rs  traits.rs
oyta_core/src/symbol_table/: mod.rs  registry.rs  types.rs
oyta_core/src/template/: engine.rs  facade.rs  mod.rs  tera_engine.rs
oyta_core/src/timer/: callback.rs  error.rs  level.rs  mod.rs  scheduler.rs  slot.rs  stats.rs  task.rs  wheel.rs
oyta_core/src/validator/: facade.rs  mod.rs  rules.rs  validator.rs
oyta_core/src/watcher/: hot_reload.rs  mod.rs  watcher.rs
oyta_core/src/xml/: dom.rs  mod.rs  parser.rs  reader.rs  simplexml.rs  writer.rs  xpath.rs
(+230 files in other folders)
