[workspace]
resolver = "3"

members = ["oyta_cli","oyta_core"]

[workspace.dependencies]
php-rs-parser = "0.9.2"
php-ast = "0.9.2"

axum = {version = "0.8.9",features = ["json","macros","ws","multipart"]}
axum-ws-broadcaster = "0.11.0"
actix-cors = "0.7.1"

tower = "0.5.3"
tower-http = {version = "0.6.8",features = ["fs","trace","cors"]}
reqwest = {version = "0.13.2",features = ["json","blocking","rustls-tls"],default-features = false}
tokio = {version = "1.52.1",features = ["full"]}
tokio-util = {version = "0.7.18",features = ["io"]}
futures = "0.3.32"

notify = {version = "8.2.0",features = ["serde"]}

sea-orm = {version = "1.1.20",features = ["runtime-tokio-rustls","sqlx-mysql","sqlx-postgres","sqlx-sqlite"]}
sqlx = {version = "0.8.6",features = ["runtime-tokio-rustls","mysql","postgres","sqlite","rust_decimal"]}
redis = {version = "1.2.0",features = ["tokio-comp","aio","connection-manager","json","rust_decimal","tokio-rustls-comp"],default-features = false}
rust_decimal = "1.41.0"
deadpool-redis = {version = "0.23.0",features = ["rt_tokio_1"]}
moka = {version = "0.12.15",features = ["future","sync"]}
cached = "0.59.0"

figment = {version = "0.10.19",features = ["env","toml","yaml"]}
dotenvy = "0.15.7"

serde = {version = "1.0.228",features = ["derive"]}
serde_json = "1.0.149"

clap = {version = "4.6.1",features = ["derive"]}
cargo-generate = "0.23.8"
dialoguer = "0.12.0"
bytes = "1.11.1"
tempfile = "3.27.0"
assert_cmd = "2.2.1"

once_cell = "1.21.4"
parking_lot = "0.12.5"
dashmap = "6.1.0"
matchit = "0.8.4"

anyhow = "1.0.102"
thiserror = "2.0.18"

tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23",features = ["env-filter"]}

chrono = {version = "0.4.44",features = ["serde"]}
uuid = {version = "1.23.1",features = ["v8","serde"]}

hex = "0.4.3"
sha2 = "0.10.8"
sha3 = "0.10.8"
hmac = "0.12.1"
pbkdf2 = {version = "0.12.2",features = ["hmac"]}
aes-gcm = {version = "0.10.3",features = ["aes"]}
base64 = "0.22.1"

mime = "0.3.17"

regex = "1.11.1"
md5 = "0.7.0"
urlencoding = "2.1.3"

bincode = "1.3.3"
tera = "1.20.0"
rand = "0.9.1"
chrono-tz = "0.10.0"
byteorder = "1.5.0"

mago-composer = "1.24.0"
semver = {version = "1.0.28",features = ["serde"]}
zip = "8.5.1"
flate2 = "1.1.9"
tar = "0.4.45"