[package]
name = "oyta_cli"
version = "0.1.0"
edition = "2024"
publish = ["tuna"]

[[bin]]
name = "oyta-cli"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dialoguer = { workspace = true }
