[package]
name = "oyta_core"
version = "0.1.0"
edition = "2024"
publish = ["tuna"]

[[bin]]
name = "oyta"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
php-rs-parser = { workspace = true }
php-ast = { workspace = true }
figment = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
bytes = { workspace = true }
mime = { workspace = true }
matchit = { workspace = true }
moka = { workspace = true }
notify = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
pbkdf2 = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
md5 = { workspace = true }
urlencoding = { workspace = true }
bincode = { workspace = true }
tera = { workspace = true }
rand = { workspace = true }
chrono-tz = { workspace = true }
byteorder = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls-no-provider"], default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
# HTML 实体编码/解码
html-escape = "0.2"
# 序列化格式支持
rmp-serde = { workspace = true }
serde_cbor = { workspace = true }
postcard = { workspace = true }
# SIMD 加速相关
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
crc32fast = "1.4"
num_cpus = "1.16"
# XML 处理
quick-xml = "0.31"
# 字符编码
encoding_rs = "0.8"
# 图像处理
png = "0.17"
jpeg-decoder = "0.3"
jpeg-encoder = "0.6"
gif = "0.13"
# 压缩
bzip2 = "0.4"
# SHA1 (用于 Phar 签名)
sha1 = "0.10"
bitflags = "2.4"
# 文件系统遍历
walkdir = "2.5"
# S3 兼容存储 SDK（支持 AWS S3、MinIO、Cloudflare R2 等）
# rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
# 阿里云 OSS SDK
# aliyun-oss-rust-sdk = { version = "0.2", features = ["async"], default-features = false }
# 腾讯云 COS SDK
# qcos = { version = "0.1", default-features = false }
# FTP/FTPS 客户端
suppaftp = { version = "8", features = ["tokio", "secure"] }

[dev-dependencies]
tempfile = "3"
